# loopstorm-guard

./: .env.local.example  .eslintrc.base.json  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE-AGPL-3.0  LICENSE-MIT  LoopStorm_Guard_v1.3_Product_Document.md  README.md  SECURITY.md  VERIFY.md  biome.json  deny.toml  package.json  tad-amendment-v1_2.md  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  dco.yml  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy.yml  engine-build.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: lib.rs  main.rs  output.rs  replay.rs  validate.rs  verify.rs
apps/cli/tests/: e2e_case_studies.rs
apps/engine/: Cargo.toml  build.rs
apps/engine/benches/: enforcement_pipeline.rs
apps/engine/src/: audit.rs  budget.rs  decision.rs  evaluator.rs  lib.rs  loop_detector.rs  main.rs  policy.rs  redaction.rs  server.rs  telemetry.rs
apps/engine/tests/: ipc_integration.rs
apps/mcp-proxy/: package.json
apps/mcp-proxy/src/: config.ts  errors.ts  index.ts  mapping.ts  proxy.ts
apps/mcp-proxy/tests/: config.test.ts  mapping.test.ts
apps/otel-exporter/: package.json  tsconfig.json
apps/otel-exporter/src/: attributes.ts  config.ts  exporter-factory.ts  ids.ts  index.ts  jsonl-reader.ts  resource.ts  span-builder.ts  span-status.ts  trace-buffer.ts  types.ts
apps/otel-exporter/tests/: attributes.test.ts  ids.test.ts  integration.test.ts  jsonl-reader.test.ts  span-status.test.ts  trace-buffer.test.ts
apps/shim-python/: pyproject.toml
apps/shim-python/loopstorm/: __init__.py  _args_hash.py  _connection.py  _errors.py  _guard.py  _jcs.py  _openai.py  _protocol.py  _types.py
apps/shim-python/tests/: conftest.py  test_args_hash.py  test_connection.py  test_errors.py  test_guard.py  test_jcs.py  test_openai.py  test_protocol.py
apps/shim-ts/: package.json
apps/shim-ts/src/: args-hash.ts  connection.ts  errors.ts  guard.ts  index.ts  jcs.ts  openai.ts  protocol.ts  types.ts
apps/shim-ts/tests/: args-hash.test.ts  errors.test.ts  guard.test.ts  jcs.test.ts  openai.test.ts  protocol.test.ts
apps/supervisor/: package.json  tsconfig.json
apps/supervisor/src/: config.ts  index.ts  prompt.ts  session.ts
apps/supervisor/src/lib/: backend-client.ts  loop-analysis.ts  recovery-eval.ts  risk-score.ts  sanitize.ts
apps/supervisor/src/llm/: anthropic.ts  deepseek.ts  mock.ts  provider.ts
apps/supervisor/src/tools/: escalation.ts  interpretation.ts  learning.ts  (+3 more)
apps/supervisor/tests/: config.test.ts  loop-analysis.test.ts  prompt-injection.test.ts  prompt.test.ts  recovery-eval.test.ts  risk-score.test.ts  session.test.ts
docs/: control-philosophy.md  deployment-modes.md  monorepo-structure.md  oss-release-checklist.md  oss-saas-business-model.md  owasp-agentic-mapping.md  secrets-inventory.md  v1-feature-audit-2026-03-26.md  v1-go-nogo-2026-03-30.md  v1-readiness-report.md  v1.1-production-readiness-audit-2026-04-07.md
docs/adrs/: ADR-001-ipc-wire-format.md  ADR-002-fail-closed-default.md  ADR-003-policy-schema-single-source.md  ADR-004-run-id-client-generated.md  ADR-005-jsonl-fail-closed.md  ADR-006-queue-backpressure.md  ADR-007-multi-dimensional-budget.md  ADR-008-agent-role-flat-tag.md  ADR-009-mcp-proxy-mode.md  ADR-010-semantic-matching-experimental.md  ADR-011-better-auth.md  ADR-012-ai-supervisor-architecture.md  ADR-013-open-core-licensing.md  ADR-014-v1.1-gate-resolutions.md  ADR-015-backend-deployment-target.md  ADR-017-llm-provider-strategy.md  ADR-018-event-forwarder.md  ADR-020-rls-transaction-scoping.md  ADR-021-email-transport.md  ADR-022-rate-limiting.md
docs/guides/: budget-configuration.md  event-schema-reference.md  integration.md  policy-authoring.md  threat-model.md
docs/plans/: v1.1-implementation-plan.md
examples/: basic-policy.yaml  loopstorm-proxy.yaml  supervisor-policy.yaml
examples/policy-packs/: starter.yaml  supervisor-policy.yaml
scripts/: add-license-headers.sh  check-js-licenses.sh  check-license-boundary.sh  pre-commit-license-check.sh  sync-schemas.sh
specs/: ai-supervisory-interface.md  args-hash.md  behavioral-telemetry.md  ipc-wire-format.md  mcp-proxy-mode.md  otel-span-mapping.md  risk-score-algorithm.md  supervisor-system-prompt.md
specs/task-briefs/: p0-7-ipc-listener.md  p1-python-shim.md  p2-cli-e2e.md  p3-backend-database.md  p4-web-dashboard.md  p5-specs.md  v1.1-ai-supervisor.md  v1.1-behavioral-telemetry.md  v1.1-otel-exporter.md
supabase/: config.toml  seed.sql
tests/fixtures/: args-hash-vectors.json  behavioral-telemetry-vectors.json  gen-otel-fixture.ts  otel-sample-run.jsonl  otel-span-id-vectors.json
tests/fixtures/policies/: budget-kill.yaml  loop-kill.yaml  ssrf-block.yaml
