# SPDX-License-Identifier: MIT
[package]
name = "loopstorm-cli"
description = "LoopStorm Guard CLI — policy validation, audit log verification, local agent wrapping"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "loopstorm_cli"
path = "src/lib.rs"

[[bin]]
name = "loopstorm"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Pretty terminal output
colored = "3.1"

# Depend on the engine lib for shared types
loopstorm-engine = { path = "../engine" }
